# whyapp

./: .gitignore  DEPLOYMENT.md  README.md  build.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  dependabot.yml
electron/: main.js  preload.js
src/: App.tsx  globals.d.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  commands.rs  encryption.rs  finance.rs  identity.rs  main.rs  media.rs  network.rs  sandbox.rs  storage.rs
src/__tests__/: ChatLogic.test.ts  EnergyBalancer.test.ts  Icons.test.ts  SoulEngine.test.ts
src/components/: AbraxasView.tsx  AccountSwitcher.tsx  AscensionOverlay.tsx  ChatList.tsx  ChatView.tsx  ConsciousStatus.tsx  CosmicOverloadView.tsx  CosmicSoulView.tsx  IlluminismView.tsx  ImmortalView.tsx  MasterpieceView.tsx  MessiahView.tsx  MiniAppsView.tsx  MusicView.tsx  OmegaDashboard.tsx  Sidebar.tsx  SingularityView.tsx  SpacesView.tsx  TitleBar.tsx  TrimurtiView.tsx  UniversalAcademyView.tsx  UniversalSaviourView.tsx  VideoView.tsx  WalletView.tsx
src/lib/: CosmicKnowledge.ts  EnergyBalancer.ts  InfiniteverseKnowledge.ts  LanguageEngine.ts  Manifesto.ts  OntologicalMath.ts  SoulEngine.ts  tauri.ts
