[package]
name = "whyapp"
version = "0.1.0"
description = "The ultimate hybrid super app"
authors = ["WHYAPP Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
webrtc = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
aes-gcm = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
rand = "0.8"
base64 = "0.21"
jsonwebtoken = "9.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
# default enables tauri's "custom-protocol" feature
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic messages
codegen-units = 1 # Optimize for size
lto = true # Enable Link Time Optimization
opt-level = "s" # Optimize for size
strip = true # Strip symbols from binary
